# web_project_team_1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  fly.toml  pyproject.toml  requirements.txt
project/apps/: context_processors.py
project/apps/contacts/: choices.py  constants.py  forms.py  models.py  urls.py  views.py
project/apps/contacts/forms/: __init__.py  contact_form.py  email_form.py  phone_form.py
project/apps/contacts/migrations/: 0001_initial.py  0002_alter_contact_address_alter_contact_birthday_and_more.py  0002_alter_contact_options_alter_contact_birthday.py  0003_alter_email_email_addr_alter_email_type_and_more.py
project/apps/file_storage/: factories.py  forms.py  mixins.py  services.py  tasks.py  urls.py  views.py
project/apps/notes/: admin.py  forms.py  models.py  services.py  urls.py  views.py
project/apps/reminder/: admin.py  forms.py  reminder_mixin.py  tasks.py  urls.py  utils.py  views.py
project/apps/scrapping/: urls.py  views.py
project/apps/search_app/: models.py  urls.py  utils.py  views.py
project/apps/user_auth/: context_processors.py  factories.py  forms.py  urls.py  views.py
project/apps/user_profile/: apps.py  forms.py  models.py  services.py  urls.py  views.py
project/config/: asgi.py  celery.py  context_processors.py  settings.py  urls.py  wsgi.py
project/static/: staticfiles.json
project/templates/: about.html  base.html  header.html  pagination.html
project/utils/: choices.py  file_categories.py  pagination.py
project/utils/telegramm/: telegram_bot.py
(+122 files in other folders)
