[tool.poetry]
name = "web-project-team-1"
version = "0.1.0"
description = ""
authors = ["Vaipik <n.khylko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2 = "^2.9.5"
django-autoslug = "^1.9.8"
pytils = "^0.4.1"
black = "^23.1.0"
dropbox = "^11.36.0"
django-storages = "^1.13.2"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
psycopg2-binary = "^2.9.5"
python-dateutil = "^2.8.2"



[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"
factory-boy = "^3.2.1"
python-dotenv = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
